add some service